--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -198,7 +198,9 @@
     <!-- to change themes - light or dark -->
     <uses-permission android:name="android.permission.CHANGE_OVERLAY_PACKAGES" />
 
+    <!-- screenrecord -->
     <uses-permission android:name="android.permission.ACCESS_SURFACE_FLINGER" />
+
 
     <application
         android:name=".SystemUIApplication"
@@ -260,12 +262,11 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".SoundRefreshReceiver"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.android.systemui.action.REFRESH_SOUND" />
-            </intent-filter>
-        </receiver>
+        <!-- started from PhoneWindowManager
+             TODO: Should have an android:permission attribute -->
+        <service android:name=".omni.screenrecord.TakeScreenrecordService"
+            android:process=":screenrecord"
+            android:exported="false" />
 
         <service android:name=".ImageWallpaper"
                 android:permission="android.permission.BIND_WALLPAPER"
