--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -200,6 +200,15 @@
 
     <uses-permission android:name="android.permission.ACCESS_SURFACE_FLINGER" />
 
+    <!-- DU permissions -->
+    <uses-permission android:name="android.permission.NAVIGATION_EDITOR" />
+    <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+    <uses-permission android:name="android.permission.ACCESS_SURFACE_FLINGER" />
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" />
+
     <application
         android:name=".SystemUIApplication"
         android:persistent="true"
@@ -308,19 +317,21 @@
                   android:exported="true">
         </activity>
 
-        <activity android:name=".tuner.NavBarActivity"
-                  android:theme="@style/ExTunerSettings"
-                  android:label="@string/nav_bar"
-                  android:process=":tuner"
-                  android:parentActivityName="com.colt.settings.fragments.Navbar"
-                  android:exported="true">
-        </activity>
-
         <activity android:name=".tuner.LockscreenActivity"
                   android:theme="@style/ExTunerSettings"
                   android:label="@string/tuner_lock_screen"
                   android:process=":tuner"
-                  android:parentActivityName="com.colt.settings.fragments.LockScreenSettings"
+                  android:parentActivityName="com.colt.settings.fragments.ColtSettingsLayout"
+                  android:exported="true">
+        </activity>
+
+        <activity android:name=".tuner.NavBarActivity"
+                  android:enabled="true"
+                  android:icon="@drawable/tuner"
+                  android:theme="@style/TunerSettings"
+                  android:label="@string/systemui_tuner_navbar_title"
+                  android:parentActivityName="com.colt.settings.fragments.ColtSettingsLayout"
+                  android:process=":tuner"
                   android:exported="true">
         </activity>
 
