--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -202,13 +202,21 @@
     <!-- screenrecord -->
     <uses-permission android:name="android.permission.ACCESS_SURFACE_FLINGER" />
 
-
     <!-- Sync tile -->
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
 
     <!-- Locale QS -->
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
+
+    <!-- DU permissions -->
+    <uses-permission android:name="android.permission.NAVIGATION_EDITOR" />
+    <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+    <uses-permission android:name="android.permission.ACCESS_SURFACE_FLINGER" />
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" />
 
     <application
         android:name=".SystemUIApplication"
@@ -324,19 +332,21 @@
                   android:exported="true">
         </activity>
 
-        <activity android:name=".tuner.NavBarActivity"
-                  android:theme="@style/ExTunerSettings"
-                  android:label="@string/nav_bar"
-                  android:process=":tuner"
-                  android:parentActivityName="com.colt.settings.fragments.Navbar"
-                  android:exported="true">
-        </activity>
-
         <activity android:name=".tuner.LockscreenActivity"
                   android:theme="@style/ExTunerSettings"
                   android:label="@string/tuner_lock_screen"
                   android:process=":tuner"
-                  android:parentActivityName="com.colt.settings.fragments.LockScreenSettings"
+                  android:parentActivityName="com.colt.settings.fragments.ColtSettingsLayout"
+                  android:exported="true">
+        </activity>
+
+        <activity android:name=".tuner.NavBarActivity"
+                  android:enabled="true"
+                  android:icon="@drawable/tuner"
+                  android:theme="@style/TunerSettings"
+                  android:label="@string/systemui_tuner_navbar_title"
+                  android:parentActivityName="com.colt.settings.fragments.ColtSettingsLayout"
+                  android:process=":tuner"
                   android:exported="true">
         </activity>
 
