--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -267,7 +267,7 @@
         <activity android:name=".tuner.TunerActivity"
                   android:enabled="true"
                   android:icon="@drawable/tuner"
-                  android:theme="@style/TunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/system_ui_tuner"
                   android:process=":tuner"
                   android:exported="true">
@@ -282,7 +282,7 @@
         <activity-alias android:name=".DemoMode"
                   android:targetActivity=".tuner.TunerActivity"
                   android:icon="@drawable/tuner"
-                  android:theme="@style/TunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/demo_mode"
                   android:process=":tuner"
                   android:exported="true">
@@ -293,7 +293,7 @@
         </activity-alias>
 
         <activity android:name=".tuner.StatusbarItemsActivity"
-                  android:theme="@style/ExTunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/statusbar_items_title"
                   android:process=":tuner"
                   android:parentActivityName="com.colt.settings.ColtSettingsLayout"
@@ -301,7 +301,7 @@
         </activity>
 
         <activity android:name=".tuner.PowerActivity"
-                  android:theme="@style/ExTunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/tuner_full_importance_settings"
                   android:process=":tuner"
 		  android:parentActivityName="com.colt.settings.ColtSettingsLayout"
@@ -309,7 +309,7 @@
         </activity>
 
         <activity android:name=".tuner.NavBarActivity"
-                  android:theme="@style/ExTunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/nav_bar"
                   android:process=":tuner"
  		  android:parentActivityName="com.colt.settings.ColtSettingsLayout"
@@ -317,7 +317,7 @@
         </activity>
 
         <activity android:name=".tuner.LockscreenActivity"
-                  android:theme="@style/ExTunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/tuner_lock_screen"
                   android:process=":tuner"
 		  android:parentActivityName="com.colt.settings.ColtSettingsLayout"
