Make Tuner fully inherit O style
 * Even though System UI tuner is hidden (and will forcibly continue to),
   we will want to access several parts of it. Apply the default layout
   from Settings app, so that the preferences don't look out of place.

*DU Edits*
- Move styles to custom styles to avoid merge conflicts
- Changed theme for Tuner activity and demo mode
- Applied changes made by @maxwen in Settings to remove margins

Change-Id: Id1dbad8965e46191dd1f6b144964fceb968c73af

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -274,7 +274,7 @@
         <activity android:name=".tuner.TunerActivity"
                   android:enabled="true"
                   android:icon="@drawable/tuner"
-                  android:theme="@style/TunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/system_ui_tuner"
                   android:process=":tuner"
                   android:exported="true">
@@ -289,7 +289,7 @@
         <activity-alias android:name=".DemoMode"
                   android:targetActivity=".tuner.TunerActivity"
                   android:icon="@drawable/tuner"
-                  android:theme="@style/TunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/demo_mode"
                   android:process=":tuner"
                   android:exported="true">
@@ -300,7 +300,7 @@
         </activity-alias>
 
         <activity android:name=".tuner.StatusbarItemsActivity"
-                  android:theme="@style/ExTunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/statusbar_items_title"
                   android:process=":tuner"
                   android:parentActivityName="com.colt.settings.ColtSettingsLayout"
@@ -308,7 +308,7 @@
         </activity>
 
         <activity android:name=".tuner.PowerActivity"
-                  android:theme="@style/ExTunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/tuner_full_importance_settings"
                   android:process=":tuner"
 		  android:parentActivityName="com.colt.settings.ColtSettingsLayout"
@@ -316,7 +316,7 @@
         </activity>
 
         <activity android:name=".tuner.NavBarActivity"
-                  android:theme="@style/ExTunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/nav_bar"
                   android:process=":tuner"
  		  android:parentActivityName="com.colt.settings.ColtSettingsLayout"
@@ -324,7 +324,7 @@
         </activity>
 
         <activity android:name=".tuner.LockscreenActivity"
-                  android:theme="@style/ExTunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/tuner_lock_screen"
                   android:process=":tuner"
 		  android:parentActivityName="com.colt.settings.ColtSettingsLayout"
