--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -309,18 +309,18 @@
         </activity>
 
         <activity android:name=".tuner.NavBarActivity"
-                  android:theme="@style/CustomTunerSettings"
+                  android:theme="@style/ExTunerSettings"
                   android:label="@string/nav_bar"
                   android:process=":tuner"
- 		  android:parentActivityName="com.colt.settings.ColtSettingsLayout"
+                  android:parentActivityName="com.colt.settings.fragments.Navbar"
                   android:exported="true">
         </activity>
 
         <activity android:name=".tuner.LockscreenActivity"
-                  android:theme="@style/CustomTunerSettings"
+                  android:theme="@style/ExTunerSettings"
                   android:label="@string/tuner_lock_screen"
                   android:process=":tuner"
-		  android:parentActivityName="com.colt.settings.ColtSettingsLayout"
+                  android:parentActivityName="com.colt.settings.fragments.LockScreenSettings"
                   android:exported="true">
         </activity>
 
